[gd_scene load_steps=46 format=3 uid="uid://dnaew27d822x6"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_0lycu"]
[ext_resource type="Texture2D" uid="uid://rotqhetufn6l" path="res://sprites/batMain-Sheet.png" id="1_yshbn"]
[ext_resource type="Texture2D" uid="uid://cmokvv6sntfcq" path="res://sprites/batJump-Sheet.png" id="2_trpw3"]
[ext_resource type="Texture2D" uid="uid://bt270vl1qtgq7" path="res://sprites/E_Key_Dark.png" id="4_u1xw5"]
[ext_resource type="Texture2D" uid="uid://esy27fyqhl1q" path="res://sprites/aims4.png" id="4_x4ci5"]
[ext_resource type="Script" path="res://scripts/aim.gd" id="5_7d3cd"]
[ext_resource type="Texture2D" uid="uid://bbocwki3b8dsw" path="res://sprites/Mouse_Left_Key_Dark.png" id="5_73brr"]
[ext_resource type="AudioStream" uid="uid://cngcu4mq1eh11" path="res://audio/hurt1.mp3" id="6_3ke7p"]
[ext_resource type="Texture2D" uid="uid://db50q0rqrqox0" path="res://sprites/XboxSeriesX_B.png" id="6_som54"]
[ext_resource type="Texture2D" uid="uid://toxmmxfvfux7" path="res://sprites/XboxSeriesX_X.png" id="7_85cji"]
[ext_resource type="Texture2D" uid="uid://dh14nsld0kbbr" path="res://sprites/Shift_Key_Dark.png" id="7_cklpc"]
[ext_resource type="AudioStream" uid="uid://c7ljyqkc4cvir" path="res://audio/hurt2.mp3" id="7_df0ua"]
[ext_resource type="AudioStream" uid="uid://vsj6765agu8k" path="res://audio/wingFlap (1).wav" id="8_h8e0y"]
[ext_resource type="AudioStream" uid="uid://bsqyhi2f6achu" path="res://audio/wingFlap (2).wav" id="9_db5s2"]
[ext_resource type="AudioStream" uid="uid://bifvcyviecha1" path="res://audio/echolocate.wav" id="10_3xkpx"]
[ext_resource type="AudioStream" uid="uid://dta3s8y5nn1in" path="res://audio/dash.wav" id="11_ryr41"]
[ext_resource type="AudioStream" uid="uid://bg4nappmxooep" path="res://audio/step.mp3" id="12_4sj41"]
[ext_resource type="AudioStream" uid="uid://ce7chdpa220uk" path="res://audio/step2.mp3" id="13_eaabp"]
[ext_resource type="AudioStream" uid="uid://c84521dkgiutf" path="res://audio/pickupCoin.wav" id="14_pmg71"]

[sub_resource type="AtlasTexture" id="AtlasTexture_yp2dg"]
atlas = ExtResource("2_trpw3")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pfwhj"]
atlas = ExtResource("2_trpw3")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v42f6"]
atlas = ExtResource("1_yshbn")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dlc5b"]
atlas = ExtResource("1_yshbn")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ba3gb"]
atlas = ExtResource("1_yshbn")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bnkwc"]
atlas = ExtResource("1_yshbn")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xobd3"]
atlas = ExtResource("1_yshbn")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kemts"]
atlas = ExtResource("1_yshbn")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rxuwn"]
atlas = ExtResource("1_yshbn")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ul7uw"]
atlas = ExtResource("1_yshbn")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wbrup"]
atlas = ExtResource("2_trpw3")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lu6q2"]
atlas = ExtResource("2_trpw3")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_42dnm"]
atlas = ExtResource("2_trpw3")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j6ihd"]
atlas = ExtResource("2_trpw3")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ylyoy"]
atlas = ExtResource("2_trpw3")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hmy11"]
atlas = ExtResource("1_yshbn")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vgark"]
atlas = ExtResource("1_yshbn")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hb1wo"]
atlas = ExtResource("1_yshbn")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bhtrb"]
atlas = ExtResource("1_yshbn")
region = Rect2(64, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_jbkvr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yp2dg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pfwhj")
}],
"loop": true,
"name": &"fall",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v42f6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dlc5b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ba3gb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bnkwc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xobd3")
}],
"loop": false,
"name": &"hurt",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kemts")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rxuwn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kemts")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rxuwn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kemts")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ul7uw")
}],
"loop": true,
"name": &"idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wbrup")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lu6q2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_42dnm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j6ihd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ylyoy")
}],
"loop": false,
"name": &"jump",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hmy11")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vgark")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hb1wo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bhtrb")
}],
"loop": true,
"name": &"run",
"speed": 8.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_o2nmh"]

[sub_resource type="CircleShape2D" id="CircleShape2D_kfrxw"]

[sub_resource type="Gradient" id="Gradient_n7l1w"]
interpolation_color_space = 1
offsets = PackedFloat32Array(0.3, 1)
colors = PackedColorArray(0.85098, 0.341176, 0.388235, 1, 1, 1, 1, 0)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_53v7t"]
playback_mode = 1
random_pitch = 1.56
streams_count = 2
stream_0/stream = ExtResource("6_3ke7p")
stream_0/weight = 1.0
stream_1/stream = ExtResource("7_df0ua")
stream_1/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_qgcay"]
playback_mode = 1
random_pitch = 1.56
streams_count = 2
stream_0/stream = ExtResource("8_h8e0y")
stream_0/weight = 1.0
stream_1/stream = ExtResource("9_db5s2")
stream_1/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_vhqhg"]
playback_mode = 1
random_pitch = 1.5
random_volume_offset_db = 1.12
streams_count = 2
stream_0/stream = ExtResource("12_4sj41")
stream_0/weight = 5.0
stream_1/stream = ExtResource("13_eaabp")
stream_1/weight = 1.0

[node name="Player" type="CharacterBody2D"]
texture_filter = 1
use_parent_material = true
script = ExtResource("1_0lycu")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
use_parent_material = true
sprite_frames = SubResource("SpriteFrames_jbkvr")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.0646963

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 7)
shape = SubResource("CircleShape2D_o2nmh")

[node name="reloadTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="playerSecretRevealer" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="playerSecretRevealer"]
shape = SubResource("CircleShape2D_kfrxw")

[node name="prompts echo" type="Node2D" parent="."]
visible = false
use_parent_material = true
position = Vector2(0, 8)
scale = Vector2(1.5, 1.5)

[node name="e key" type="Sprite2D" parent="prompts echo"]
position = Vector2(0, -24)
scale = Vector2(0.12, 0.12)
texture = ExtResource("4_u1xw5")

[node name="left click" type="Sprite2D" parent="prompts echo"]
position = Vector2(-13, -24)
scale = Vector2(0.09, 0.09)
texture = ExtResource("5_73brr")

[node name="a buttonn" type="Sprite2D" parent="prompts echo"]
position = Vector2(13, -24)
scale = Vector2(0.1, 0.1)
texture = ExtResource("6_som54")

[node name="prompts dash" type="Node2D" parent="."]
visible = false
use_parent_material = true
position = Vector2(0, 8)
scale = Vector2(1.5, 1.5)

[node name="shift key" type="Sprite2D" parent="prompts dash"]
position = Vector2(-7, -24)
scale = Vector2(0.15, 0.15)
texture = ExtResource("7_cklpc")

[node name="x buttonn" type="Sprite2D" parent="prompts dash"]
position = Vector2(6, -24)
scale = Vector2(0.1, 0.1)
texture = ExtResource("7_85cji")

[node name="aim" type="Sprite2D" parent="."]
use_parent_material = true
texture = ExtResource("4_x4ci5")
offset = Vector2(30, 0)
script = ExtResource("5_7d3cd")

[node name="dashTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="effectRed" type="CPUParticles2D" parent="."]
use_parent_material = true
position = Vector2(0, 8)
emitting = false
amount = 10
lifetime = 0.2
one_shot = true
speed_scale = 0.8
explosiveness = 0.75
direction = Vector2(0, 0)
spread = 148.64
gravity = Vector2(0, 1000)
initial_velocity_min = 100.0
initial_velocity_max = 200.0
angular_velocity_max = 1.6
damping_min = 10.0
damping_max = 30.0
scale_amount_min = 2.0
scale_amount_max = 5.0
color = Color(0.85098, 0.341176, 0.388235, 1)
color_ramp = SubResource("Gradient_n7l1w")

[node name="HurtSound" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_53v7t")
bus = &"SFX"

[node name="WingFlap" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_qgcay")
bus = &"SFX"

[node name="EcholocateNoise" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_3xkpx")
bus = &"SFX"

[node name="DashNoise" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_ryr41")
bus = &"SFX"

[node name="WalkNoise" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_vhqhg")
volume_db = -15.0
pitch_scale = 0.78
bus = &"SFX"

[node name="pickupNoise" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_pmg71")
bus = &"SFX"

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="reloadTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="dashTimer" to="." method="_on_dash_timer_timeout"]
